# My-Calculator

./: .gitignore  CMakeLists.txt  LICENSE
resources/: images.qrc
src/: BasicCalculate.cpp  BasicCalculate.h  Error_Handling.cpp  Error_Handling.h  Types.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
